--- a/Earthquakes_past7days/index.html
+++ b/Earthquakes_past7days/index.html
@@ -29,7 +29,8 @@
 
     <!-- Our Javascript -->
     <!-- <script type="text/javascript" src="static/js/logicStep1.js"></script> -->
-    <script type="text/javascript" src="static/js/logicStep2.js"></script>
+    <!-- <script type="text/javascript" src="static/js/logicStep2.js"></script> -->
+    <script type="text/javascript" src="static/js/logicStep3.js"></script>
 
     
 
